Contrast fix

--- a/_assets/scss/imports/_blog-grid.scss
+++ b/_assets/scss/imports/_blog-grid.scss
@@ -31,7 +31,7 @@ h1 {
 }
 
 .post {
-	background-color: #eee;
+	background-color: #dadada;
 	margin-bottom: 20px;
 
 	@media all and (min-width: $md) {
